// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager Test error notification with top-left position 1`] = `
<div>
  <div
    class="v-snack application v-snack--active v-snack--left v-snack--top"
    position="top-left"
    text="Test message"
  >
    <div
      class="v-snack__wrapper error"
      role="alert"
    >
      <div
        class="v-snack__content"
      >
        <div>
          <span>
            Test message
          </span>
           
          <div
            class="DialogActions"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`manager Test info notification 1`] = `
<div>
  <div
    class="v-snack application v-snack--active v-snack--bottom"
    text="Test message"
  >
    <div
      class="v-snack__wrapper info"
      role="alert"
    >
      <div
        class="v-snack__content"
      >
        <div>
          <span>
            Test message
          </span>
           
          <div
            class="DialogActions"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`manager Test success notification 1`] = `
<div>
  <div
    class="v-snack application v-snack--active v-snack--bottom"
    text="Test message"
  >
    <div
      class="v-snack__wrapper success"
      role="alert"
    >
      <div
        class="v-snack__content"
      >
        <div>
          <span>
            Test message
          </span>
           
          <div
            class="DialogActions"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`manager Test warning notification with bottom-right position 1`] = `
<div>
  <div
    class="v-snack application v-snack--active v-snack--bottom v-snack--right"
    position="bottom-right"
    text="Test message"
  >
    <div
      class="v-snack__wrapper warning"
      role="alert"
    >
      <div
        class="v-snack__content"
      >
        <div>
          <span>
            Test message
          </span>
           
          <div
            class="DialogActions"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
